--- a/.github/workflows/main-push.yml
+++ b/.github/workflows/main-push.yml
@@ -14,10 +14,10 @@ jobs:
   gitleaks:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
       with:
         fetch-depth: '2'
     - name: gitleaks-action
-      uses: zricethezav/gitleaks-action@master
+      uses: gitleaks/gitleaks-action@v1.6.0
       with: 
         config-path: gitleaks.config
