--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,4 +66,6 @@ jobs:
 
       - name: Codecov
         uses: codecov/codecov-action@v3.1.1
+        with:
+          directory: ./Web/TestResults
 
