--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,7 +62,13 @@ jobs:
 
       - shell: powershell
         run: |
-          Get-ChildItem -Path ${{ runner.workspace }} -Recurse
+          Get-ChildItem -Path ./Web/TestResults -Recurse
+        continue-on-error: true
+
+      - name: move expected cobertura files to known filenames
+        shell: powershell
+        run: |
+          Get-ChildItem -Path ./Web/TestResults -Filter "*.cobertura.xml" -Recurse -Attributes !Directory | ForEach-Object -Begin {$counter = 0} -Process { Copy-Item $_.FullName -Destination "./Web/TestResults/$($counter).cobertura.xml" ; $counter++}
         continue-on-error: true
 
       - shell: powershell
@@ -73,4 +79,4 @@ jobs:
       - name: Codecov
         uses: codecov/codecov-action@v3.1.1
         with:
-          files: ${{ runner.workspace }}/**/*.cobertura.xml
+          files: ./Web/TestResults/*.cobertura.xml
