tweaked yaml array syntax

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,7 +80,7 @@ jobs:
         uses: codecov/codecov-action@v3.1.1
         with:
           files:
-            ./Web/TestResults/0.cobertura.xml
-            ./Web/TestResults/1.cobertura.xml
-            ./Web/TestResults/2.cobertura.xml
-            ./Web/TestResults/3.cobertura.xml
+            - ./Web/TestResults/0.cobertura.xml
+            - ./Web/TestResults/1.cobertura.xml
+            - ./Web/TestResults/2.cobertura.xml
+            - ./Web/TestResults/3.cobertura.xml
