Alternative specification of paths to cobertura xml files

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,7 +80,7 @@ jobs:
         uses: codecov/codecov-action@v3.1.1
         with:
           files:
-            ${{ runner.workspace }}/get-information-about-schools/Web/TestResults/0.cobertura.xml
-            ${{ runner.workspace }}/get-information-about-schools/Web/TestResults/1.cobertura.xml
-            ${{ runner.workspace }}/get-information-about-schools/Web/TestResults/2.cobertura.xml
-            ${{ runner.workspace }}/get-information-about-schools/Web/TestResults/3.cobertura.xml
+            ${{ github.workspace }}/Web/TestResults/0.cobertura.xml
+            ${{ github.workspace }}/Web/TestResults/1.cobertura.xml
+            ${{ github.workspace }}/Web/TestResults/2.cobertura.xml
+            ${{ github.workspace }}/Web/TestResults/3.cobertura.xml
