--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -100,5 +100,5 @@ jobs:
       - name: Codecov
         uses: codecov/codecov-action@v3.1.1
         with:
-          files: ${{ github.workspace }}\Web\TestResults\0.cobertura.xml,${{ github.workspace }}\Web\TestResults\1.cobertura.xml,${{ github.workspace }}\Web\TestResults\2.cobertura.xml,${{ github.workspace }}\Web\TestResults\3.cobertura.xml
+          directory: ${{ github.workspace }}\Web\TestResults
           verbose: true
