--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -101,4 +101,5 @@ jobs:
         uses: codecov/codecov-action@v3.1.1
         with:
           directory: ${{ github.workspace }}\Web\TestResults
+          files: ./0.cobertura.xml,./1.cobertura.xml,./2.cobertura.xml,./3.cobertura.xml
           verbose: true
